<resources>
    <string name="app_name">HealthCare</string>
    <string name="olaCadastreParaComecar">Olá, cadastre-se\npara começar! 👋</string>
    <string name="logoHealthCare">Logo HealthCare</string>
    <string name="bemVindoa">Bem-vindo(a)!</string>
    <string name="antesDeComecar">Antes de começar, precisamos de\nmais algumas informações:</string>
    <string name="pesoKG">Peso (kg)</string>
    <string name="alturaCM">Altura (cm)</string>
    <string name="continuar">Continuar</string>
    <string name="insiraSuasInformacoes">Insira suas informações:</string>
    <string name="primeiroNome">Primeiro nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="dataDeNascimento">Data de nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="cpf">CPF</string>
    <string name="spinnerSexo">Spinner de escolha de sexo feminino ou masculino</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="receberNewsletter">Receber newsletter</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="cadastreSeComo">Cadastre-se como</string>
    <string name="empresa">empresa</string>
    <string name="olaBemVindoaDeVolta">Olá, bem-vindo(a)\nde volta! 👋</string>
    <string name="esqueceuASenha">Esqueceu a senha?</string>
    <string name="logar">Logar</string>
    <string name="naoTemUmaConta">Não tem uma conta?</string>
    <string name="registrese">Registre-se!</string>
    <string name="spinnerBiotipo">Spinner de escolha de biotipo corporal</string>
    <string name="ola_nomeusu">Olá, \'nome_usu\'!</string>
    <string name="cadastreSeComoEmpresa">Cadastre-se como empresa</string>
    <string name="peso_e_imc">Peso e IMC</string>
    <string name="_18_5"><![CDATA[< 18.5]]></string>
    <string name="_48_6_kg"><![CDATA[< 48.6 Kg]]></string>
    <string name="_18_5_a_24_9">18.5 a 24.9</string>
    <string name="_48_6_a_65_3_kg">48.6 a 65.3 Kg</string>
    <string name="_24_9_a_30">24.9 a 30</string>
    <string name="_65_3_a_78_7_kg">65.3 a 78.7 Kg</string>
    <string name="_30"><![CDATA[> 30]]></string>
    <string name="_78_7_kg"><![CDATA[> 78.7 Kg]]></string>
    <string name="bot_o_para_voltar_para_tela_de_conteudos">Botão para voltar para tela de conteudos</string>
    <string name="voltar_para_tela_de_peso">Voltar para tela de peso</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="calcular">Calcular</string>
    <string name="s_mbolo_sexo_masculino">Símbolo sexo masculino</string>
    <string name="homem">Homem</string>
    <string name="s_mbolo_sexo_feminino">Símbolo sexo feminino</string>
    <string name="mulher">Mulher</string>
    <string name="altura_cm">Altura (cm)</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="idade">Idade</string>
    <string name="_0">0</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="torne_se_premium">Torne-se premium! 🏆</string>
    <string name="saiba_como_melhorar_a_sua_experi_ncia">Saiba como melhorar a sua experiência.</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>

    <string name="server_client_id">120097756940-g2ptut08sfjv0cpiifau0jspb8rnvphf.apps.googleusercontent.com</string>
</resources>